commiting changes to switch to master branch

--- a/employee.html
+++ b/employee.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="'width-device width, initial scale=1.0">
-        <title>Document</title>
-        <td>   </td>
-    </head>
-    <changed in branch 1>
-<body>
-    <table>
-        <tr>
-            <td> "changed" </td>
-        </tr>
-    </table>
-</body>
-</html>
+"deleted all code in branch1"
